<?xml version="1.0"?>
<package format="3">
  <name>trajectory_loader</name>
  <version>0.1.0</version>
  <description>The trajectory_loader package</description>
  <maintainer email="yukky.saito@gmail.com">Yukihiro Saito</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
