<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>lidar_integration</name>
    <version>1.0.0</version>
    <description>executables to facilitate integration tests for lidar-related software</description>
    <maintainer email="opensource@apex.ai">Frederik Beaujean</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_pytest</buildtool_depend>

    <depend>autoware_auto_common</depend>
    <depend>autoware_auto_perception_msgs</depend>
    <depend>launch_ros</depend>
    <depend>launch_testing</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>lifecycle_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_lint_auto</test_depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
